--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-<link rel="preconnect" href="https://fonts.gstatic.com" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Permanent+Marker&display=swap" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Palette+Mosaic&display=swap" rel="stylesheet"> 
 
 {% for stylesheet in site.stylesheets %}
 <link rel="stylesheet" href="{{ site.baseurl }}{{ stylesheet }}" />
