--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -29,6 +29,10 @@ footer, header, hgroup, menu, nav, section, main {
 	display: block;
 }
 
+html {
+overflow-y: scroll;
+}
+
 body {
 	line-height: 1;
 }
