--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -288,6 +288,7 @@ header section.logo-title {
   margin-bottom: 10px;	
 		
   background-image: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+  background-image: linear-gradient(90deg, #2a2a2a 0%, #6a6a6a 100%);	
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;
@@ -296,6 +297,7 @@ header section.logo-title {
 
 header section.logo-title a:hover {
   background-image: linear-gradient(45deg, #FC466B 0%, #3F5EFB 100%);
+  background-image: linear-gradient(90deg, #2a2a2a 0%, #6a6a6a 100%);		
   -webkit-background-clip: text;
   -moz-background-clip: text;
   background-clip: text;	
